--- a/views/admin/abroad/abroad_test_index.html
+++ b/views/admin/abroad/abroad_test_index.html
@@ -11,7 +11,7 @@
 <table class="table table-hover table-striped">
     <tr>
         <th>考试ID</th>
-        <th>考试名称</th>
+        <th>考试项目</th>
         <th>考试顺序</th>
         <th>操作</th>
     </tr>
