--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -68,6 +68,15 @@
                         <li><a href="/admin/study_abroad/nav/enroll/add">录取案例添加</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">培训管理<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/admin/training">培训分类列表</a></li>
+                        <li><a href="/admin/training/add">培训分类添加</a></li>
+                        <li><a href="/admin/training/content">培训文章列表</a></li>
+                        <li><a href="/admin/training/content/add">培训文章添加</a></li>
+                    </ul>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
