--- a/views/admin/abroad/abroad_test_edit.html
+++ b/views/admin/abroad/abroad_test_edit.html
@@ -12,6 +12,8 @@
     <div class="form-group">
         <label for="test_name">考试名称：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="test_name" value="{{test.Test_name}}" name="test_name">
+        <label for="test_url">考试url：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="test_url" value="{{test.Test_url}}" name="test_url">
         <label for="test_order">考试顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="test_order" value="{{test.Test_order}}" name="test_order">
     </div>
