--- a/views/admin/abroad/abroad_test_add.html
+++ b/views/admin/abroad/abroad_test_add.html
@@ -12,6 +12,8 @@
     <div class="form-group">
         <label for="test_name">考试名称：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="test_name" placeholder="请输入考试名称" name="test_name">
+        <label for="test_url">考试url：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="test_url" placeholder="请输入考试项目要跳转的链接" name="test_url">
         <label for="test_order">考试顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="test_order" placeholder="请输入考试顺序，默认为0" name="test_order">
     </div>
