--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -77,6 +77,13 @@
                         <li><a href="/admin/training/content/add">培训文章添加</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">教师管理<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/admin/teacher">教师列表</a></li>
+                        <li><a href="/admin/teacher/add">教师添加</a></li>
+                    </ul>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
