--- a/public/css/main_index.css
+++ b/public/css/main_index.css
@@ -1,4 +1,5 @@
 body{
+    *text-align: center;
 }
 /*
     顶头图片
@@ -16,15 +17,15 @@ body{
 /*
     不同图片样式
 */
-.big div:nth-child(2){
+.big>div+div{
     display: none;
     background: url("../images/head/banner2.png") no-repeat top center;
 }
-.big div:nth-child(3){
+.big>div+div+div{
     display: none;
     background: url("../images/head/banner3.png") no-repeat top center;
 }
-.big div:nth-child(4){
+.big>div+div+div+div{
     display: none;
     background: url("../images/head/banner4.png") no-repeat top center;
 }
@@ -33,10 +34,12 @@ body{
     导航、登录、注册
 */
 .hold{
+    display: block;
     width: 100%;
     min-width: 1140px;
     margin: auto;
     background-color: rgba(0,0,0,.3);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000,endColorstr=#4C000000);
     position: absolute;
     top: 0;
     left:0;
@@ -53,9 +56,8 @@ body{
     float: right;
 }
 .container .ban li{
-    line-height: 25px;
+    font: normal 14px/25px "微软雅黑";
     height: 25px;
-    font-size: 14px;
     float: left;
     margin-left: 20px;
 }
@@ -68,7 +70,8 @@ body{
     top: 10px;
 }
 #logo img{
-    width:20%;
+    width: 90px;
+    height: 42px;
     display: block;
     float: left;
     cursor: pointer;
@@ -82,6 +85,7 @@ body{
     display: block;
     color: #337ab7;
     background-color: rgba(255,255,204,.5);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7Fffffcc,endColorstr=#7Fffffcc);
     border-radius: 8px;
 }
 .container .ban li a{
@@ -99,6 +103,7 @@ body{
     margin: 0 0 0 -60px;
     padding: 10px 15px 0;
     background-color: rgba(0,0,0,.6);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000,endColorstr=#99000000);
     width: 120px;
     position: absolute;
     top: 25px;
@@ -112,25 +117,34 @@ body{
     height: 20px;
     width: 100%;
     display: inline-block;
+    *zoom: 1;
+    *display: inline;
     text-align: center;
 }
-
 
 /*
     登录、注册的遮罩层
 */
-.shade{
+.shade_wrap{
     width: 100%;
     height: 100%;
     position: fixed;
     top:0;
     left: 0;
-    background-color: rgba(0,0,0,0.3);
     z-index: 3;
+    *text-align: center;
+}
+.shade {
+    background-color: rgb(0, 0, 0);
+    opacity: .3;
+    filter: alpha(opacity:30);
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 .login,.register{
     width: 404px;
-    background-color: rgba(255,255,255,0.95);
+    background-color: rgb(255,255,255);
     border: 1px solid darkgray;
     padding: 50px;
     position: relative;
@@ -179,12 +193,13 @@ body{
 .colWarning{
     color: #999;
     margin: 0;
-    line-height: 35px;
+    font: normal 14px/35px "微软雅黑";
     text-indent: .2em;
-    font-size: 14px;
     width: 100%;
     height: 35px;
     display: inline-block;
+    *zoom: 1;
+    *display: inline;
 }
 .tips2{
     text-align: center;
@@ -194,6 +209,8 @@ body{
 .tips{
     width: 100%;
     display: inline-block;
+    *zoom: 1;
+    *display: inline;
     color: #3c763d;
     margin: 0;
     text-align: center;
@@ -209,23 +226,28 @@ body{
     导航栏、图片轮转区
 */
 .outer{
+    display: block;
     width: 100%;
     min-width: 1140px;
     margin: 20px auto 0;
+    *text-align: center;
 }
 .menu{
     width: 1140px;
     margin: 0 auto;
+    *margin-top: 20px;
     height: 41px;
     position: relative;
+    z-index: 1;
 }
 .menu .server{
-    background-color: rgba(0,0,0,.3);
     width: 230px;
     height: 460px;
     position: absolute;
     z-index: 1;
     overflow: hidden;
+    top: 0;
+    left: 0;
 }
 .menu .server h3{
     line-height: 40px;
@@ -234,10 +256,23 @@ body{
     border-bottom: 1px solid #337ab7;
     color: #000;
 }
+.menu .server .server_cover {
+    position: absolute;
+    top: 40px;
+    left: 0;
+    width: 230px;
+    height: 424px;
+    background-color: #000;
+    opacity: .3;
+    filter: alpha(opacity:30);
+}
 .menu .server ul{
+    position: relative;
     padding: 0 11px;
     list-style: none;
     margin: 0;
+    *text-align: left;
+    *white-space: nowrap;
 }
 .menu .server .server_part{
     padding: 12px 10px 10px;
@@ -265,7 +300,7 @@ body{
 }
 .menu .navigation{
     list-style: none;
-    padding: 0 0 0 230px;
+    margin-left: 230px;
     height: 41px;
     float: left;
     overflow: hidden;
@@ -294,7 +329,9 @@ body{
     top: 41px;
     left: 230px;
     background-color: rgba(255,255,255,.95);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#E5ffffff,endColorstr=#E5ffffff);
     padding: 0 15px;
+    *padding: 0;
     border: 1px solid #337ab7;
     display: none;
     z-index: 1;
@@ -306,23 +343,27 @@ body{
     cursor: default;
 }
 .menu .navigation h4{
-    font-size: 14px;
-    font-weight: bold;
+    font: bold 14px/28px "微软雅黑";
     float: left;
     width: 8%;
-    line-height: 28px;
     color: #000;
     cursor: text;
+    *white-space: nowrap;
+    *margin-left: 20px;
+    *text-align: left;
 }
 .menu .navigation .nav_list{
+    float: right;
     padding: 0 25px 15px;
     max-width: 680px;
     width: 85%;
     margin: 0 0 0 40px;
     list-style: none;
-    float: left;
     cursor: default;
     border-bottom: 1px solid #ccc;
+    *white-space: nowrap;
+    *width: 75%;
+    *margin-right: 20px;
 }
 .menu .navigation .nav_list li{
     margin-right: 15px;
@@ -330,8 +371,7 @@ body{
 }
 .menu .navigation .nav_list li a{
     padding: 0;
-    line-height: 28px;
-    font-size: 13px;
+    font: bold 13px/28px "微软雅黑";
     color: #444;
 }
 .menu .navigation .nav_list li a:hover{
@@ -344,13 +384,12 @@ body{
 .ban_bg{
     position: relative;
     height: 420px;
+    *text-align: center;
 }
 .ban_bg .bg_part{
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    *text-align: center;
 }
-.ban_bg .bg_part li a{
+.ban_bg .bg_part div a{
     margin: 0 auto;
     padding: 0;
     display: block;
@@ -358,8 +397,9 @@ body{
     min-width: 1140px;
     height: 420px;
     background: url("/public/images/head/ban_bg1.png") no-repeat top center;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
     background-size: cover;
-    /*background: url("http://liuxue.zmnedu.com/static/index/images/ban_c.jpg") no-repeat top center;*/
 }
 .ban_bg .extra{
     position: relative;
@@ -377,6 +417,9 @@ body{
     bottom: 20px;
     overflow: hidden;
 }
+.bg_btn>li{
+    background-color: #337ab7;
+}
 .ban_bg .bg_btn li{
     width:40px;
     height: 10px;
@@ -385,22 +428,19 @@ body{
     margin-right: 10px;
     cursor: pointer;
 }
-.ban_bg .bg_btn li:nth-child(1){
-    background-color: #337ab7;
-}
 
 /*
     轮换图片修改样式
 */
-.ban_bg .bg_part li:nth-child(2) a{
+.ban_bg .bg_part>div+div a{
     display: none;
     background: url("/public/images/head/ban_bg2.png") no-repeat top center;
 }
-.ban_bg .bg_part li:nth-child(3) a{
+.ban_bg .bg_part>div+div+div a{
     display: none;
     background: url("/public/images/head/ban_bg3.png") no-repeat top center;
 }
-.ban_bg .bg_part li:nth-child(4) a{
+.ban_bg .bg_part>div+div+div+div a{
     display: none;
     background: url("/public/images/head/ban_bg4.png") no-repeat top center;
 }
@@ -416,6 +456,7 @@ body{
     height:75px;
     background-color: #f4f4f8;
     overflow: hidden;
+    *text-align: center;
 }
 .ban_foot .ban_item{
     width: 1140px;
@@ -429,13 +470,16 @@ body{
     height: 78px;
     width: 1080px;
     margin: 0 auto;
+    *height: 38px;
 }
 .ban_foot .ban_item ul li{
     float: left;
-    padding: 0 40px 0 30px;
+    padding-left: 30px;
     border-right: 1px solid #ccc;
     cursor: pointer;
     width: 25%;
+    *padding-right: 20px;
+    *width: 20%;
 }
 .ban_foot .ban_item ul li p{
     margin-right: 20px;
@@ -465,10 +509,12 @@ body{
     学校搜索栏
 */
 .school{
+    display: block;
     width:1140px;
     margin: 30px auto 20px;
     height: 330px;
     overflow: hidden;
+    text-align: left;
 }
 .school .school_search{
     float: left;
@@ -482,27 +528,37 @@ body{
 }
 .school .school_search .school_search_content{
     width: 100%;
+    *width: 93%;
     height: 300px;
+    *height: 260px;
     border: 1px solid #ccc;
     padding: 25px 30px 15px;
 }
-.school .school_search .search_icon{
+.school .school_search .search_icon_father{
     float: left;
     border: 1px solid #337ab7;
     width: 200px;
     height: 34px;
-    padding-left: 35px;
+    *height: 32px;
+}
+.school .school_search .search_icon {
+    display: inline-block;
+    width: 25px;
+    height: 34px;
+    margin-right: 1px;
+    *margin-right: 12px;
     background: url("/public/images/icon/search_icon.png") no-repeat -25px -52px;
 }
 #school_name{
-    width: 100%;
-    height: 32px;
-    line-height: 32px;
+    display: inline-block;
+    width: 155px;
+    height: 30px;
+    font: normal 15px/34px "微软雅黑";
     border: none;
     outline: medium;
-    padding: 3px 5px 3px 1px;
-    font-size: 15px;
-    font-weight: normal;
+    padding: 0;
+    margin-top: -28px;
+    *margin-top: -16px;
 }
 .school .school_search_content .search{
     float: left;
@@ -510,19 +566,18 @@ body{
     height: 34px;
     width: 58px;
     background-color: #337ab7;
-    padding: 10px;
-    font-size: 16px;
+    font: bold 16px/34px "微软雅黑";
     text-align: center;
     color: #fff;
-    font-weight: bold;
-    border: none;
+    border: 0;
     outline: none;
 }
 .school .school_search_content p{
     margin-top: 50px;
-    font-size: 14px;
-    font-weight: 700;
+    text-align: left;
+    font: 700 14px "微软雅黑";
     color: #818181;
+    *white-space: nowrap;
 }
 .school .school_search_content .school_area{
     width: 100%;
@@ -536,7 +591,7 @@ body{
     width: 113px;
     line-height: 36px;
     text-align: center;
-    margin: 22px 0 10px 10px;
+    margin: 16px 0 8px 8px;
     font-size: 16px;
 }
 .school_area a:hover{
@@ -567,6 +622,7 @@ body{
     float: left;
     text-align: center;
     padding-bottom: 11px;
+    *width: auto;
 }
 .school_news .school_news_title a:nth-child(1){
     color: #337ab7;
@@ -588,15 +644,18 @@ body{
 .school_news .school_strategy ul li{
     list-style-position: inside;
     margin: 0 0 18px 0;
+    *margin: 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 .school_news .school_strategy ul a{
+    text-align: left;
     font-size: 13px;
     color: #555;
-    /*margin-left: -10px;*/
     margin-left: -5px;
+    *margin-left: 0;
+    *line-height: 32px;
 }
 .school_news .school_strategy ul a:hover{
     color: #259;
@@ -624,6 +683,7 @@ body{
     float: right;
     font-size: 13px;
     padding-top: 10px;
+    *width: auto;
 }
 .popular_school .school_logo{
     border-bottom: 1px dotted #ccc;
@@ -633,6 +693,9 @@ body{
     list-style: none;
     margin: 0;
     padding: 0;
+}
+.popular_school .school_logo ul p{
+    *margin: 5px 0;
 }
 .popular_school .school_logo ul li{
     height: 120px;
@@ -650,18 +713,20 @@ body{
     margin:  0 0 10px 0;
 }
 .popular_school .school_logo .logo_cn{
+    text-align: left;
     color: #555;
-    font-size: 12px;
-    font-weight: 700;
-    line-height: 24px;
+    font: 700 12px/24px "微软雅黑";
     display: block;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 .popular_school .school_logo .logo_en{
+    text-align: left;
     color: #b7b7b7;
     font-size: 12px;
+    *display: inline-block;
+    *width: 100%;
 }
 .popular_school .school_logo a:hover{
     color: #259;
@@ -675,14 +740,14 @@ body{
     border-bottom: 1px solid #337ab7;
 }
 .section_title p{
-    font-size: 22px;
-    line-height: 50px;
+    text-align: left;
+    font: normal 22px/50px "微软雅黑";
     color: #333;
-    font-weight: normal;
 }
 
 /*单一*/
 .study_procedure{
+    display: block;
     width:1140px;
     margin: 0 auto;
 }
@@ -697,6 +762,8 @@ body{
     border: 1px solid #333;
     padding: 25px 30px;
     margin-right: 28px;
+    *width: 56px;
+    *height: 77px;
 }
 .study_procedure .procedure .procedure_last{
     margin: 0;
@@ -721,6 +788,7 @@ body{
     留学板块通用样式
 */
 .study_abroad{
+    display: block;
     width: 1140px;
     margin: 0 auto 10px;
 }
@@ -735,6 +803,7 @@ body{
     border: 1px solid #FFCC33;
     float: left;
     overflow: hidden;
+    *position: relative;
 }
 .study_abroad .study_abroad_nav{
     float: left;
@@ -759,8 +828,9 @@ body{
 /*留给onmousemove*/
 .study_abroad .study_abroad_nav ul a{
     display: inline-block;
-    font-size: 20px;
-    line-height: 50px;
+    *zoom: 1;
+    *display: inline;
+    font: normal 20px/50px "微软雅黑";
     color: #fff;
     width: 100%;
     height: 100%;
@@ -784,7 +854,7 @@ body{
     border-bottom: 3px dotted #333;
 }
 .study_abroad_content .study_abroad_mid .study_abroad_bom ul{
-    border: none;
+    border: 0;
     padding: 5px 0 0;
 }
 .study_abroad_content .study_abroad_mid .study_abroad_top ul li{
@@ -795,6 +865,7 @@ body{
     margin-top: 10px;
     border-left: 1px solid #333;
     position: relative;
+    *padding: 0;
 }
 .study_abroad_content .study_abroad_mid .study_abroad_bom ul li{
     margin-top: -1px;
@@ -805,12 +876,14 @@ body{
     width: 77px;
     height: 18px;
     background: url("/public/images/study_abroad_list_bg.png") no-repeat 50%;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
     background-size: cover;
     color: #fff;
-    font-size: 14px;
+    font: normal 14px/18px "微软雅黑";
     text-align: center;
-    line-height: 18px;
     margin-bottom: 15px;
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="study_abroad_list_bg.png",  sizingMethod="scale")
 }
 .study_abroad_content .study_abroad_mid .study_abroad_top ul p{
     font-size: 14px;
@@ -880,6 +953,7 @@ body{
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    *text-align: left;
 }
 .study_abroad_content .mid_article ul li a:hover{
     color: #FFCC33;
@@ -901,11 +975,11 @@ body{
     text-align: center;
     position: absolute;
     top:58px;
+    left: 0;
     cursor: pointer;
 }
 .study_abroad .mid_img p a{
-    line-height: 48px;
-    font-size: 14px;
+    font: normal 14px/48px "微软雅黑";
     color: #333;
 }
 /*
@@ -962,6 +1036,7 @@ body{
     width: 50%;
     text-align: center;
     color: #333;
+    *padding: 5px 0;
 }
 .study_abroad .case_title a:nth-child(1){
     background-color: #337ab7;
@@ -975,6 +1050,7 @@ body{
     background-color: #e7e7e7;
     text-indent: 1em;
     line-height: 34px;
+    *margin: 0;
     margin-bottom: 2px;
     cursor: pointer;
 }
@@ -1082,6 +1158,7 @@ body{
     能力培训样式
 */
 .training{
+    display: block;
     width: 1140px;
     margin: 0 auto;
 }
@@ -1141,6 +1218,8 @@ body{
     float: left;
     margin: 0 13px 25px 0;
     overflow: hidden;
+    *margin-right: 10px;
+    *text-align: left;
 }
 .training_part .training_img{
     width: 100px;
@@ -1258,6 +1337,7 @@ body{
     教师阵容通用样式
 */
 .teacher{
+    display: block;
     width:1140px;
     margin: 0 auto 60px;
 }
@@ -1293,6 +1373,7 @@ body{
     border-radius: 100px;
     background: url("/public/images/teacher1.png") 50% no-repeat;
     background-size: cover;
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/teacher1.png",  sizingMethod="scale")
 }
 .teacher ul h3{
     font-size: 16px;
@@ -1331,9 +1412,11 @@ body{
     联系方式
 */
 .connect{
+    display: block;
     width: 1140px;
     margin: 0 auto 30px;
     position: relative;
+    *text-align: left;
 }
 .connect span{
     position: absolute;
@@ -1386,10 +1469,12 @@ body{
     底部信息footer
 */
 .footer{
+    display: block;
     width:100%;
     min-width: 1140px;
     margin: 0 auto;
     background-color: #323232;
+    *text-align: left;
 }
 .footer .catalog{
     width: 1140px;
@@ -1522,6 +1607,7 @@ body{
     background: url("/public/images/tel_close.png");
     background-size: cover;
     cursor: pointer;
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/tel_close.png",  sizingMethod="scale")
 }
 .tel_call p{
     text-align: center;
@@ -1538,6 +1624,7 @@ body{
     height: 90px;
     background: url("/public/images/tel.png");
     background-size: cover;
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/tel.png",  sizingMethod="scale")
 }
 .tel_call input{
     width: 120px;
@@ -1592,4 +1679,5 @@ body{
     background: url("/public/images/tel_logo.png") no-repeat;
     background-size: cover;
     margin: 10px auto;
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/tel_logo.png",  sizingMethod="scale")
 }
