--- a/views/main/index.html
+++ b/views/main/index.html
@@ -9,6 +9,20 @@
     <link rel="stylesheet" href="/public/css/reset.css">
     <link rel="stylesheet" href="/public/css/main_index.css">
     <script src="/public/js/jquery-3.2.0.min.js"></script>
+    <script src="/public/js/selectivizr-development.js"></script>
+    <!--[if lt IE 9]>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script>
+        (function() {
+            if (!/*@cc_on!@*/0) return;
+            var e = "abbr, article, aside, audio, canvas, datalist, details, dialog, eventsource, figure, footer, header, hgroup, mark, menu, meter, nav, output, progress, section, time, video".split(', ');
+            var i= e.length;
+            while (i--){
+                document.createElement(e[i])
+            }
+        })()
+    </script>
+    <![endif]-->
     <script src="/public/js/bootstrap.min.js"></script>
     <script src="/public/js/index.js"></script>
     <script src="/public/js/main_action.js"></script>
@@ -22,9 +36,9 @@
     <div></div>
     <div></div>
 </div>
-<nav id="mainNav" class="navbar hold">
+<div id="mainNav" class="navbar hold">
     <div class="container">
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div>
             <ul class="ban">
                 <li id="logo">
                     <img src="/public/images/logo.png" alt="海外留学网">
@@ -58,18 +72,19 @@
             </ul>
         </div>
     </div>
-</nav>
+</div>
 <!--顶部结束-->
 
 <!--登录开始-->
-<div class="shade" style="display: none" id="loginBox">
+<div class="shade_wrap" style="display: none" id="loginBox">
+    <div class="shade"></div>
     <div class="login">
         <span></span>
         <h3>登录海外留学网</h3>
         <label for="inputEmail" class="sr-only"></label>
-        <input type="text" class="form-control" id="inputEmail" name="username" placeholder="手机号/邮箱">
+        <!--[if lte IE 9]><b>登录</b>：<![endif]--><input type="text" class="form-control" id="inputEmail" name="username" placeholder="手机号/邮箱">
         <label for="password" class="sr-only"></label>
-        <input type="password" id="password" class="form-control" name="password" placeholder="密码">
+        <!--[if lte IE 9]><b>密码：</b><![endif]--><input type="password" id="password" class="form-control" name="password" placeholder="密码">
         <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
         <p class="colWarning textCenter tips2"></p>
         <ul class="zhuce">
@@ -80,7 +95,8 @@
 <!--登录结束-->
 
 <!--注册开始-->
-<div class="shade" style="display: none" id="registerBox">
+<div class="shade_wrap" style="display: none" id="registerBox">
+    <div class="shade"></div>
     <div class="register">
         <span></span>
         <h3>注册海外留学网帐号</h3>
@@ -107,6 +123,7 @@
     <div class="menu clearfix">
         <div class="server clearfix">
             <h3>留学服务</h3>
+            <div class="server_cover"></div>
             <ul>
                 <li class="server_part clearfix">
                     <a class="server_head clearfix" href="">考试培训</a>
@@ -180,12 +197,12 @@
 
 <!--图片轮转开始-->
 <div class="ban_bg">
-    <ul class="bg_part">
-        <li><a href="/"></a></li>
-        <li><a href="/"></a></li>
-        <li><a href="/"></a></li>
-        <li><a href="/"></a></li>
-    </ul>
+    <div class="bg_part">
+        <div><a href="/"></a></div>
+        <div><a href="/"></a></div>
+        <div><a href="/"></a></div>
+        <div><a href="/"></a></div>
+    </div>
     <div class="extra">
         <ul class="bg_btn">
             <li></li>
@@ -240,7 +257,8 @@
         <h3>学校搜索</h3>
         <div class="school_search_content">
             <form method="post" target="_blank">
-                <label for="school_name" class="search_icon">
+                <label for="school_name" class="search_icon_father">
+                    <i class="search_icon"></i>
                     <input type="text" id="school_name" placeholder="搜索你感兴趣的学校" name="school_name">
                 </label>
                 <button type="submit" class="search">搜索</button>
