--- a/views/admin/fileupload/fileupload_school.html
+++ b/views/admin/fileupload/fileupload_school.html
@@ -2,6 +2,11 @@
 
 {% block main %}
 <link rel="stylesheet" href="/public/css/form.css">
+<ol class="breadcrumb">
+    <li><a href="/">官网首页</a></li>
+    <li><span>学校图片上传</span></li>
+</ol>
+
 <div id="container" class="container">
     <div id="errorTip" class="alert alert-warning">请选择要上传的文件！</div>
     <form class="form-signin" role="form" method="post" enctype='multipart/form-data'>
