--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -85,6 +85,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">图片管理<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/admin/file_upload/school">学校图片上传</a></li>
+                        <li><a href="/admin/file_upload/school/list">学校图片列表</a></li>
                         <li><a href="/admin/file_upload/teacher">教师图片上传</a></li>
                     </ul>
                 </li>
