--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -87,6 +87,7 @@
                         <li><a href="/admin/file_upload/school">学校图片上传</a></li>
                         <li><a href="/admin/file_upload/school/list">学校图片列表</a></li>
                         <li><a href="/admin/file_upload/teacher">教师图片上传</a></li>
+                        <li><a href="/admin/file_upload/teacher/list">教师图片列表</a></li>
                     </ul>
                 </li>
             </ul>
