--- a/views/admin/teacher/teacher_add.html
+++ b/views/admin/teacher/teacher_add.html
@@ -12,14 +12,16 @@
     <div class="form-group">
         <label for="teacher_name">教师名称：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="teacher_name" placeholder="请输入教师名称" name="teacher_name">
-        <label for="teacher_introduce">教师简介：</label>
-        <input style="margin: 5px 0 20px" type="text" class="form-control" id="teacher_introduce" placeholder="请输入教师的简介，10个字以内" name="teacher_introduce">
-        <label for="teacher_img">图片名称：</label>
+        <label for="teacher_intro">教师简介：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="teacher_intro" placeholder="请输入教师的简介，10个字以内" name="teacher_intro">
+        <label for="teacher_img">教师图片名称：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="teacher_img" placeholder="请输入教师照片的名称，要带后缀" name="teacher_img">
         <label for="teacher_url">教师url：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="teacher_url" placeholder="请输入要跳转的链接" name="teacher_url">
-        <label for="teacher_order">教师名称：</label>
+        <label for="teacher_order">教师顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="teacher_order" placeholder="请输入教师显示顺序" name="teacher_order">
+        <label for="teacher_background">教师背景：</label><br>
+        <textarea class="form-control" style="margin-top: 10px;resize: none" name="teacher_background" id="teacher_background" rows="5" placeholder="请输入教师的详细背景介绍，150字左右"></textarea>
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
