--- a/views/admin/teacher/teacher_index.html
+++ b/views/admin/teacher/teacher_index.html
@@ -22,8 +22,8 @@
     <tr>
         <td>{{teacher._id.toString()}}</td>
         <td>{{teacher.Teacher_name}}</td>
-        <td>{{teacher.Teacher_introduce}}</td>
-        <th>{{teacher.Teacher_img}}</th>
+        <td>{{teacher.Teacher_intro}}</td>
+        <td>{{teacher.Teacher_img}}</td>
         <td>{{teacher.Teacher_url}}</td>
         <td>{{teacher.Teacher_order}}</td>
         <td>
