--- a/views/main/index.html
+++ b/views/main/index.html
@@ -282,7 +282,7 @@
             <ul>
                 {% for hot_school in hot_schools %}
                 <li>
-                    <a href="" class="logo_img" style="background: url('/public/images/school/{{hot_school.School_url}}') no-repeat left top"></a>
+                    <a href="" class="logo_img" style="background: url('/public/images/school/{{hot_school.School_img}}') no-repeat left top"></a>
                     <p><a href="" class="logo_cn">{{hot_school.School_zn}}</a></p>
                     <a href="" class="logo_en">{{hot_school.School_en}}</a>
                 </li>
