--- a/views/admin/fileupload/fileupload_index.html
+++ b/views/admin/fileupload/fileupload_index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="/public/css/form.css">
 <ol class="breadcrumb">
     <li><a href="/">官网首页</a></li>
-    <li><span>学校图片上传</span></li>
+    <li><span>{{message}}</span></li>
 </ol>
 
 <div id="container" class="container">
