--- a/views/admin/school/school_add.html
+++ b/views/admin/school/school_add.html
@@ -24,8 +24,10 @@
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="school_en" placeholder="请输入学校英文名称" name="school_en">
         <label for="school_rank">学校排名：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="school_rank" placeholder="请输入学校排名" name="school_rank">
-        <label for="school_url">学校图片名称：</label>
-        <input style="margin: 5px 0 20px" type="text" class="form-control" id="school_url" placeholder="请输入学校图片名称，带后缀，图片放在images下的school文件夹" name="school_url">
+        <label for="school_url">学校url：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="school_url" placeholder="请输入学校将要跳转的链接" name="school_url">
+        <label for="school_img">学校图片名称：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="school_img" placeholder="请输入学校图片名称，带后缀，图片放在images下的school文件夹" name="school_img">
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
