--- a/views/admin/school/school_edit.html
+++ b/views/admin/school/school_edit.html
@@ -28,8 +28,10 @@
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="school_en" value="{{school.School_en}}" name="school_en">
         <label for="school_rank">学校排名：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="school_rank" value="{{school.School_rank}}" name="school_rank">
-        <label for="school_url">学校图片名称：</label>
+        <label for="school_url">学校url：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="school_url" value="{{school.School_url}}" name="school_url">
+        <label for="school_img">学校图片名称：</label>
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="school_img" value="{{school.School_img}}" name="school_img">
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
