--- a/views/main/index.html
+++ b/views/main/index.html
@@ -131,7 +131,7 @@
                         <li><a href="">一对一课程</a></li>
                         <li><a href="">学习规划</a></li>
                         <li><a href="">封闭保分班</a></li>
-                        <li><a href="">美国sat封闭保分班</a></li>
+                        <li><a href="">英国sat封闭保分班</a></li>
                     </ul>
                 </li>
                 <li class="server_part clearfix">
