--- a/views/admin/teacher/teacher_add.html
+++ b/views/admin/teacher/teacher_add.html
@@ -19,7 +19,7 @@
         <label for="teacher_url">教师url：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="teacher_url" placeholder="请输入要跳转的链接" name="teacher_url">
         <label for="teacher_order">教师顺序：</label>
-        <input style="margin: 5px 0 20px" type="text" class="form-control" id="teacher_order" placeholder="请输入教师显示顺序" name="teacher_order">
+        <input style="margin: 5px 0 20px" type="text" class="form-control" id="teacher_order" placeholder="请输入教师显示顺序默认为0" name="teacher_order">
         <label for="teacher_background">教师背景：</label><br>
         <textarea class="form-control" style="margin-top: 10px;resize: none" name="teacher_background" id="teacher_background" rows="5" placeholder="请输入教师的详细背景介绍，150字左右"></textarea>
     </div>
