--- a/views/main/index.html
+++ b/views/main/index.html
@@ -839,144 +839,47 @@
     <h1>全明星师资阵容</h1>
     <p>他们都在这里，你还要去哪儿学</p>
     <ul class="teacher_part line_1 clearfix">
+        {% for teacher in teachers %}
+        {% if loop.index0 < 6 %}
         <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
+            <a href="{{teacher.Teacher_url}}">
+                <i class="teacher_img teacher_1" style="background: url('/public/images/teacher/{{teacher.Teacher_img}}') no-repeat;background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/public/images/teacher/{{teacher.Teacher_img}}',sizingMethod='scale')"></i>
+                <h3>{{teacher.Teacher_name}}</h3>
+                <p>{{teacher.Teacher_intro}}</p>
             </a>
         </li>
-        <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
-        <li class="last_part">
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
+        {% else %}
+        {% endif %}
+        {% endfor %}
     </ul>
     <ul class="teacher_part line_2 clearfix">
+        {% for teacher in teachers %}
+        {% if loop.index0 >= 6 && loop.index0 < 13 %}
         <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
+            <a href="{{teacher.Teacher_url}}">
+                <i class="teacher_img teacher_1" style="background: url('/public/images/teacher/{{teacher.Teacher_img}}') no-repeat;background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/public/images/teacher/{{teacher.Teacher_img}}',sizingMethod='scale')"></i>
+                <h3>{{teacher.Teacher_name}}</h3>
+                <p>{{teacher.Teacher_intro}}</p>
             </a>
         </li>
-        <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
-        <li class="last_part">
-            <a href="">
-                <i class="teacher_img teacher_1"></i>
-                <h3>韦晓亮</h3>
-                <p>GRE/GMAT写作首尊</p>
-            </a>
-        </li>
+        {% else %}
+        {% endif %}
+        {% endfor %}
     </ul>
     <ul class="teacher_part line_1 clearfix">
-    <li>
-        <a href="">
-            <i class="teacher_img teacher_1"></i>
-            <h3>韦晓亮</h3>
-            <p>GRE/GMAT写作首尊</p>
-        </a>
-    </li>
-    <li>
-        <a href="">
-            <i class="teacher_img teacher_1"></i>
-            <h3>韦晓亮</h3>
-            <p>GRE/GMAT写作首尊</p>
-        </a>
-    </li>
-    <li>
-        <a href="">
-            <i class="teacher_img teacher_1"></i>
-            <h3>韦晓亮</h3>
-            <p>GRE/GMAT写作首尊</p>
-        </a>
-    </li>
-    <li>
-        <a href="">
-            <i class="teacher_img teacher_1"></i>
-            <h3>韦晓亮</h3>
-            <p>GRE/GMAT写作首尊</p>
-        </a>
-    </li>
-    <li>
-        <a href="">
-            <i class="teacher_img teacher_1"></i>
-            <h3>韦晓亮</h3>
-            <p>GRE/GMAT写作首尊</p>
-        </a>
-    </li>
-    <li class="last_part">
-        <a href="">
-            <i class="teacher_img teacher_1"></i>
-            <h3>韦晓亮</h3>
-            <p>GRE/GMAT写作首尊</p>
-        </a>
-    </li>
-</ul>
+        {% for teacher in teachers %}
+        {% if loop.index0 >= 13 %}
+        <li>
+            <a href="{{teacher.Teacher_url}}">
+                <i class="teacher_img teacher_1" style="background: url('/public/images/teacher/{{teacher.Teacher_img}}') no-repeat;background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/public/images/teacher/{{teacher.Teacher_img}}',sizingMethod='scale')"></i>
+                <h3>{{teacher.Teacher_name}}</h3>
+                <p>{{teacher.Teacher_intro}}</p>
+            </a>
+        </li>
+        {% else %}
+        {% endif %}
+        {% endfor %}
+    </ul>
     <a href="" class="teacher_more">查看更多</a>
 </section>
 <!--教师阵容结束-->
