--- a/views/main/index.html
+++ b/views/main/index.html
@@ -50,7 +50,7 @@
                 {% if userInfo.id %}
                 <li id="success">
                     <div id="username">欢迎！{{userInfo.username}}
-                        <ul class="banlist" id="banlist" style="display: none">
+                        <ul class="banlist" id="banlist">
                             <li><a href="javascript:">个人中心</a></li>
                             <li><a href="javascript:">学习中心</a></li>
                             {% if userInfo.isAdmin %}
