--- a/views/main/school_index.html
+++ b/views/main/school_index.html
@@ -3,6 +3,7 @@
 {% block title %}
 <title>搜索学校</title>
 <link rel="stylesheet" href="/public/css/school_index.css">
+<script src="/public/js/selectivizr-development.js"></script>
 <script src="/public/js/school_action.js"></script>
 {% endblock %}
 
