--- a/public/css/main_index.css
+++ b/public/css/main_index.css
@@ -47,6 +47,7 @@ body{
 .container{
     width: 1140px;
     position: relative;
+    z-index: 2;
 }
 .container .ban{
     text-shadow:0 1px 0 rgba(255,255,255,.25);
@@ -95,20 +96,25 @@ body{
 #username{
     color: #fff;
     font-size: 14px;
-    position: relative;
-    z-index: 2;
+}
+.container .ban #success:hover ul{
+    display: block!important;
+}
+#banlist {
+    display: none;
 }
 #username .banlist{
     list-style: none;
     margin: 0 0 0 -60px;
     padding: 10px 15px 0;
     background-color: rgba(0,0,0,.6);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000,endColorstr=#99000000);
     width: 120px;
     position: absolute;
-    top: 25px;
-    left: 50%;
+    top: 40px;
+    right: 0;
     white-space: nowrap;
+    background-color: #666\9;
+    *width: 90px;
 }
 .container .ban .banlist li{
     margin-left: 0;
@@ -139,24 +145,43 @@ body{
     opacity: .3;
     filter: alpha(opacity:30);
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
-.login,.register{
+.login,
+.register{
     width: 404px;
     background-color: rgb(255,255,255);
     border: 1px solid darkgray;
     padding: 50px;
     position: relative;
     top: 50%;
+    *width: 304px;
+}
+.login button,
+.register button {
+    *padding: 0!important;
+}
+.login input,
+.register input {
+    *padding: 0!important;
+    *line-height: 34px!important;
+}
+.login p,
+.register p {
+    *text-align: left;
 }
 .register{
     margin: -210px auto 0;
     height: 420px;
+    *height: 320px;
 }
 .login{
     margin: -180px auto 0;
     height: 360px;
+    *height: 260px;
 }
 .login span,.register span{
     width: 21px;
@@ -202,7 +227,7 @@ body{
     *display: inline;
 }
 .tips2{
-    text-align: center;
+    text-align: center!important;
     color: #a94442;
     font-size: 14px;
 }
@@ -213,7 +238,7 @@ body{
     *display: inline;
     color: #3c763d;
     margin: 0;
-    text-align: center;
+    text-align: center!important;
     height: 25px;
     font-size: 14px;
 }
@@ -887,6 +912,7 @@ body{
     font: normal 14px/18px "微软雅黑";
     text-align: center;
     margin-bottom: 15px;
+    background: none\9;
     filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="study_abroad_list_bg.png",  sizingMethod="scale")
 }
 .study_abroad_content .study_abroad_mid .study_abroad_top ul p{
@@ -1491,6 +1517,7 @@ body{
     padding: 80px 0 50px;
     border-bottom: 1px solid #4d4d4d;
     overflow: hidden;
+    *height: 190px;
 }
 .footer .catalog ul{
     list-style: none;
@@ -1539,6 +1566,7 @@ body{
     border-top: 1px solid #000;
     padding: 20px 0;
     overflow: hidden;
+    *height: 80px;
 }
 .footer .copyright p{
     text-align: center;
@@ -1615,6 +1643,7 @@ body{
     background: url("/public/images/tel_close.png");
     background-size: cover;
     cursor: pointer;
+    background: none\9;
     filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/tel_close.png",  sizingMethod="scale")
 }
 .tel_call p{
@@ -1632,6 +1661,7 @@ body{
     height: 90px;
     background: url("/public/images/tel.png");
     background-size: cover;
+    background: none\9;
     filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/tel.png",  sizingMethod="scale")
 }
 .tel_call input{
@@ -1687,5 +1717,6 @@ body{
     background: url("/public/images/tel_logo.png") no-repeat;
     background-size: cover;
     margin: 10px auto;
+    background: none\9;
     filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/tel_logo.png",  sizingMethod="scale")
 }
