--- a/public/css/main_layout_index.css
+++ b/public/css/main_layout_index.css
@@ -1,18 +1,20 @@
+
 /*
     导航、登录、注册
 */
 .hold{
+    display: block;
     width: 100%;
     min-width: 1140px;
     margin: auto;
     background-color: rgba(0,0,0,.3);
-    position: relative;
-    top: 0;
-    left:0;
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000,endColorstr=#4C000000);
+    position: static;
 }
 .container{
     width: 1140px;
     position: relative;
+    z-index: 3;
 }
 .container .ban{
     text-shadow:0 1px 0 rgba(255,255,255,.25);
@@ -22,11 +24,16 @@
     float: right;
 }
 .container .ban li{
-    line-height: 25px;
+    font: normal 14px/25px "微软雅黑";
     height: 25px;
-    font-size: 14px;
     float: left;
     margin-left: 20px;
+}
+.container .ban #success:hover ul{
+    display: block;
+}
+#banlist {
+    display: none;
 }
 #logo{
     padding: 0;
@@ -37,7 +44,8 @@
     top: 10px;
 }
 #logo img{
-    width:20%;
+    width: 90px;
+    height: 42px;
     display: block;
     float: left;
     cursor: pointer;
@@ -51,6 +59,7 @@
     display: block;
     color: #337ab7;
     background-color: rgba(255,255,204,.5);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7Fffffcc,endColorstr=#7Fffffcc);
     border-radius: 8px;
 }
 .container .ban li a{
@@ -60,19 +69,20 @@
 #username{
     color: #fff;
     font-size: 14px;
-    position: relative;
-    z-index: 1;
 }
 #username .banlist{
     list-style: none;
     margin: 0 0 0 -60px;
     padding: 10px 15px 0;
-    background-color: rgba(0,0,0,.6);
+    background-color: rgba(0,0,0,.6)!important;
     width: 120px;
     position: absolute;
-    top: 25px;
-    left: 50%;
+    top: 40px;
+    right: 0;
     white-space: nowrap;
+    background-color: #666\9;
+    *width: 90px;
+
 }
 .container .ban .banlist li{
     margin-left: 0;
@@ -81,37 +91,62 @@
     height: 20px;
     width: 100%;
     display: inline-block;
+    *zoom: 1;
+    *display: inline;
     text-align: center;
 }
-
 
 /*
     登录、注册的遮罩层
 */
-.shade{
+.shade_wrap{
     width: 100%;
     height: 100%;
     position: fixed;
     top:0;
     left: 0;
-    background-color: rgba(0,0,0,0.3);
     z-index: 3;
+    *text-align: center;
+}
+.shade {
+    background-color: rgb(0, 0, 0);
+    opacity: .3;
+    filter: alpha(opacity:30);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .login,.register{
     width: 404px;
-    background-color: rgba(255,255,255,0.95);
+    background-color: rgb(255,255,255);
     border: 1px solid darkgray;
     padding: 50px;
     position: relative;
     top: 50%;
+    *width: 304px;
+}
+.login button,.register button {
+    *padding: 0!important;
+}
+.login input,.register input {
+    *padding: 0!important;
+    *line-height: 34px!important;
+}
+.login p,
+.register p {
+    *text-align: left;
 }
 .register{
     margin: -210px auto 0;
     height: 420px;
+    *height: 320px;
 }
 .login{
     margin: -180px auto 0;
     height: 360px;
+    *height: 260px;
 }
 .login span,.register span{
     width: 21px;
@@ -148,24 +183,27 @@
 .colWarning{
     color: #999;
     margin: 0;
-    line-height: 35px;
+    font: normal 14px/35px "微软雅黑";
     text-indent: .2em;
-    font-size: 14px;
     width: 100%;
     height: 35px;
     display: inline-block;
+    *zoom: 1;
+    *display: inline;
 }
 .tips2{
-    text-align: center;
+    text-align: center!important;
     color: #a94442;
     font-size: 14px;
 }
 .tips{
     width: 100%;
     display: inline-block;
+    *zoom: 1;
+    *display: inline;
     color: #3c763d;
     margin: 0;
-    text-align: center;
+    text-align: center!important;
     height: 25px;
     font-size: 14px;
 }
@@ -186,16 +224,17 @@
     width: 1140px;
     height: 41px;
     margin: 0 auto;
-    position: relative;
     text-align: center;
 }
+
 .menu .navigation{
-    list-style: none;
-    padding: 0;
-    height: 41px;
     display: inline-block;
     margin: 0 auto;
-    overflow: hidden;
+    list-style: none;
+    height: 41px;
+    position: relative;
+    *zoom: 1;
+    *display: inline;
 }
 .menu .navigation .nav_head{
     background-color: white;
@@ -205,20 +244,25 @@
 }
 .menu .navigation .nav_head a{
     padding: 0 18px;
-    line-height: 40px;
     font-size: 16px;
+    line-height: 40px;
     color: #000;
 }
 .menu .navigation .nav_head:hover{
     background-color: #337ab7;
     cursor: pointer;
 }
+.menu .navigation .nav_head:hover .nav_content{
+    display: block;
+}
 .menu .navigation .nav_content{
     position: absolute;
     top: 41px;
-    left: 50%;
+    left: 0;
     background-color: rgba(255,255,255,.95);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#E5ffffff,endColorstr=#E5ffffff);
     padding: 0 15px;
+    *padding: 0;
     border: 1px solid #337ab7;
     display: none;
     z-index: 1;
@@ -228,28 +272,29 @@
     float: left;
     padding-top: 10px;
     cursor: default;
-    text-align: left;
 }
 .menu .navigation h4{
-    font-size: 14px;
-    font-weight: bold;
+    font: bold 14px/28px "微软雅黑";
     float: left;
     width: 8%;
-    line-height: 28px;
     color: #000;
     cursor: text;
-}
-.menu .navigation .nav_head:hover .nav_content{
-    display: block;
+    *white-space: nowrap;
+    *margin-left: 20px;
+    text-align: left;
 }
 .menu .navigation .nav_list{
+    float: right;
     padding: 0 25px 15px;
+    max-width: 680px;
     width: 85%;
     margin: 0 0 0 40px;
     list-style: none;
-    float: left;
     cursor: default;
     border-bottom: 1px solid #ccc;
+    *white-space: nowrap;
+    *width: 75%;
+    *margin-right: 20px;
 }
 .menu .navigation .nav_list li{
     margin-right: 15px;
@@ -257,14 +302,12 @@
 }
 .menu .navigation .nav_list li a{
     padding: 0;
-    line-height: 28px;
-    font-size: 13px;
+    font: bold 13px/28px "微软雅黑";
     color: #444;
 }
 .menu .navigation .nav_list li a:hover{
     color: #0066FF;
 }
-
 
 .big_bg{
     width: 100%;
@@ -277,15 +320,16 @@
     height: 550px;
 }
 
-
 /*
     底部信息footer
 */
 .footer{
+    display: block;
     width:100%;
     min-width: 1140px;
     margin: 0 auto;
     background-color: #323232;
+    *text-align: left;
 }
 .footer .catalog{
     width: 1140px;
@@ -294,6 +338,7 @@
     padding: 80px 0 50px;
     border-bottom: 1px solid #4d4d4d;
     overflow: hidden;
+    *height: 190px;
 }
 .footer .catalog ul{
     list-style: none;
@@ -342,6 +387,7 @@
     border-top: 1px solid #000;
     padding: 20px 0;
     overflow: hidden;
+    *height: 80px;
 }
 .footer .copyright p{
     text-align: center;
@@ -418,6 +464,8 @@
     background: url("/public/images/tel_close.png");
     background-size: cover;
     cursor: pointer;
+    background: none\9;
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/tel_close.png",  sizingMethod="scale")
 }
 .tel_call p{
     text-align: center;
@@ -434,6 +482,8 @@
     height: 90px;
     background: url("/public/images/tel.png");
     background-size: cover;
+    background: none\9;
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/tel.png",  sizingMethod="scale")
 }
 .tel_call input{
     width: 120px;
@@ -487,5 +537,7 @@
     height: 36px;
     background: url("/public/images/tel_logo.png") no-repeat;
     background-size: cover;
+    background: none\9;
     margin: 10px auto;
+    filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/tel_logo.png",  sizingMethod="scale")
 }
